k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gict-web-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: gict.org.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gict-web-service
            port:
              number: 80
